
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/image" />
        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:layout_toEndOf="@id/image"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/artistName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/image"
            android:text="@string/track_name" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:layout_toEndOf="@id/image"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/trackName" />

        <TextView
            android:id="@+id/primaryGenreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/releaseDate"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/image"
            android:text="@string/primary_genre_name" />

        <TextView
            android:id="@+id/trackPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/primaryGenreName"
            android:layout_toEndOf="@id/image"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/track_price" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
